src/css/ListItem.css
.item-Root {
    background-color: #1C2541;
    height: fit-content;
    min-width: fit-content;
    max-width: 100%;
    margin-top: 1em;
    margin-bottom: 1em;
    min-height: 300px;
    border-radius: 5px;
}
.item-Header {
    cursor: grab;
    background-color: #3A506B;
    color: white;
    font-size: 1.4rem;
    min-width: fit-content;
    max-width: 100%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: .5em;
}
.item-Header:active {
    cursor: grabbing;
}
.item-Main {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: repeat(8, 1fr);
    grid-column-gap: 5px;
    grid-row-gap: 5px;
    padding-top: 10px;
    padding-bottom: 10px;
    height: 15em;
    width: 100%;
}
.itemImage { 
    grid-area: 1 / 1 / 9 / 4;
    background-color: #3A506B;
    color: white;
    border-radius: 5px;
    height: 100%;
    width: 100%;
}
.itemTitle { 
    grid-area: 2 / 4 / 3 / 9;
    background-color: #3A506B;
    border-radius: 5px;
    color: white;
    font-size: 1.4rem;
    overflow-y: hidden;
}
.itemDesc {
    grid-area: 3 / 4 / 7 / 9;
    background-color: #3A506B;
    border-radius: 5px;
    color: white;
    font-size: 1.1rem;
    overflow-y: scroll;
}
.itemSearchForm {
    grid-area: 1 / 4 / 2 / 9;
    height: 100%;
    width: 100%;
    background-color: #5BC0BE;
    color: black;
    border-radius: 5px;
    cursor: text;
}
.itemSearch {
    height: 100%;
    width: 100%;
    background-color: #5BC0BE;
    border-radius: 5px;
    color: black;
    font-size: 1.4rem;
    cursor: text;
}
.item-Delete {
    grid-area: 7 / 4 / 9 / 9;
    background-color: #5BC0BE;
    color: black;
    border-radius: 5px;
    cursor: pointer;
}

